pom.xml updated

--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,6 @@
                 </executions>
             </plugin>
         </plugins>
+             <finalName>java-integration-project</finalName>
     </build>
 </project>
